src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Status__c</fullName>
        <label>Budget Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Developer_Salary__c</fullName>
        <label>Developer Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Developing_cost__c</fullName>
        <label>Developing cost</label>
        <summarizedField>Milestone__c.Developing_cost__c</summarizedField>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Due_date__c</fullName>
        <label>Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finished_by__c</fullName>
        <label>Fnished by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>Profit__c / Money_without_charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Money_without_charges__c</fullName>
        <label>Money without charges</label>
        <summarizedField>Milestone__c.Money_without_charges_Currency__c</summarizedField>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <label>Profit</label>
        <summarizedField>Milestone__c.Profit_Currency__c</summarizedField>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_budget__c</fullName>
        <label>Project budget</label>
        <summarizedField>Milestone__c.Cost__c</summarizedField>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_is_finished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project is finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upcoming</fullName>
                    <default>true</default>
                    <label>Upcoming</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Whole_Amount__c</fullName>
        <label>Whole Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Due_date__c</columns>
        <columns>Finished_by__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Finished_Projects</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Finished_by__c</columns>
        <columns>Profit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_is_finished__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Finished Projects</label>
    </listViews>
    <listViews>
        <fullName>Opened_Projects</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Due_date__c</columns>
        <columns>Margin__c</columns>
        <columns>Profit__c</columns>
        <columns>Budget_Status__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In progress,Review</value>
        </filters>
        <label>Opened Projects</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_projects</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Upcoming</value>
        </filters>
        <label>Upcoming projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>